[grazie] IJPL-221420 Suppress capitalization checks in all-lowercase commit messages
Merge-request: IJ-MR-185477
Merged-by: Ilia Permiashkin <ilia.permiashkin@jetbrains.com>

GitOrigin-RevId: 45d9c2750dda4819a00972c41736ae4b7aa2e3dc